--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ simulator = [ "ckb-x64-simulator" ]
 cc = "1.0"
 
 [dependencies]
-ckb-types = { package = "ckb-standalone-types", version = "0.0.1-pre.1", default-features = false, optional = true }
+#ckb-types = { package = "ckb-standalone-types", version = "0.0.1-pre.1", default-features = false, optional = true }
+ckb-types = { package = "ckb-standalone-types", git = "https://github.com/huwenchao/ckb-standalone-types", rev = "af1888b", default-features = false, optional = true }
 buddy-alloc = { version = "0.4.1", optional = true }
 ckb-x64-simulator = { version = "0.4.0", optional = true }
